this file mostly for coordinates transformation

--- a/etl/parking_citations/citations_transform_data.ipynb
+++ b/etl/parking_citations/citations_transform_data.ipynb
@@ -3559,6 +3559,267 @@
     "parking_citations_v2.to_csv(\"parking_citations_final.csv\", encoding='utf-8', index=False)\n",
     "parking_citations_v2.head(5)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/pavelaltukhov/anaconda3/envs/PythonProjects/lib/python3.7/site-packages/IPython/core/interactiveshell.py:3044: DtypeWarning: Columns (0) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "  interactivity=interactivity, compiler=compiler, result=result)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Ticket number</th>\n",
+       "      <th>Issue Date</th>\n",
+       "      <th>Issue time</th>\n",
+       "      <th>Meter Id</th>\n",
+       "      <th>Make</th>\n",
+       "      <th>Body Style</th>\n",
+       "      <th>Color</th>\n",
+       "      <th>Location</th>\n",
+       "      <th>Route</th>\n",
+       "      <th>Agency</th>\n",
+       "      <th>Violation code</th>\n",
+       "      <th>Violation Description</th>\n",
+       "      <th>Fine amount</th>\n",
+       "      <th>Latitude</th>\n",
+       "      <th>Longitude</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>4272349605</td>\n",
+       "      <td>12/30/2015</td>\n",
+       "      <td>2201.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>OLDS</td>\n",
+       "      <td>PA</td>\n",
+       "      <td>GN</td>\n",
+       "      <td>3069 SAN MARINO ST</td>\n",
+       "      <td>00403</td>\n",
+       "      <td>54.0</td>\n",
+       "      <td>80.56E4+</td>\n",
+       "      <td>RED ZONE</td>\n",
+       "      <td>93.0</td>\n",
+       "      <td>34.054504</td>\n",
+       "      <td>-118.296550</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>4272349616</td>\n",
+       "      <td>12/30/2015</td>\n",
+       "      <td>2205.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>HOND</td>\n",
+       "      <td>PA</td>\n",
+       "      <td>WT</td>\n",
+       "      <td>2936 8TH ST W</td>\n",
+       "      <td>00403</td>\n",
+       "      <td>54.0</td>\n",
+       "      <td>80.56E1</td>\n",
+       "      <td>WHITE ZONE</td>\n",
+       "      <td>58.0</td>\n",
+       "      <td>34.057714</td>\n",
+       "      <td>-118.290016</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>4272821512</td>\n",
+       "      <td>12/30/2015</td>\n",
+       "      <td>1725.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>TOYT</td>\n",
+       "      <td>PA</td>\n",
+       "      <td>SL</td>\n",
+       "      <td>301 LAUREL AV N</td>\n",
+       "      <td>00401</td>\n",
+       "      <td>54.0</td>\n",
+       "      <td>5204A-</td>\n",
+       "      <td>DISPLAY OF TABS</td>\n",
+       "      <td>25.0</td>\n",
+       "      <td>34.076090</td>\n",
+       "      <td>-118.364762</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4272821523</td>\n",
+       "      <td>12/30/2015</td>\n",
+       "      <td>1738.0</td>\n",
+       "      <td>WF74</td>\n",
+       "      <td>RROV</td>\n",
+       "      <td>PA</td>\n",
+       "      <td>BK</td>\n",
+       "      <td>8321 3RD ST W</td>\n",
+       "      <td>00401</td>\n",
+       "      <td>54.0</td>\n",
+       "      <td>88.13B+</td>\n",
+       "      <td>METER EXP.</td>\n",
+       "      <td>63.0</td>\n",
+       "      <td>34.072748</td>\n",
+       "      <td>-118.370758</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4272821534</td>\n",
+       "      <td>12/30/2015</td>\n",
+       "      <td>1807.0</td>\n",
+       "      <td>13</td>\n",
+       "      <td>FORD</td>\n",
+       "      <td>PA</td>\n",
+       "      <td>GN</td>\n",
+       "      <td>121 CROFT AVE</td>\n",
+       "      <td>00401</td>\n",
+       "      <td>54.0</td>\n",
+       "      <td>80.58L</td>\n",
+       "      <td>PREFERENTIAL PARKING</td>\n",
+       "      <td>68.0</td>\n",
+       "      <td>34.074382</td>\n",
+       "      <td>-118.374200</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  Ticket number  Issue Date  Issue time Meter Id  Make Body Style Color  \\\n",
+       "0    4272349605  12/30/2015      2201.0      NaN  OLDS         PA    GN   \n",
+       "1    4272349616  12/30/2015      2205.0      NaN  HOND         PA    WT   \n",
+       "2    4272821512  12/30/2015      1725.0      NaN  TOYT         PA    SL   \n",
+       "3    4272821523  12/30/2015      1738.0     WF74  RROV         PA    BK   \n",
+       "4    4272821534  12/30/2015      1807.0       13  FORD         PA    GN   \n",
+       "\n",
+       "             Location  Route  Agency Violation code Violation Description  \\\n",
+       "0  3069 SAN MARINO ST  00403    54.0       80.56E4+              RED ZONE   \n",
+       "1       2936 8TH ST W  00403    54.0        80.56E1            WHITE ZONE   \n",
+       "2     301 LAUREL AV N  00401    54.0         5204A-       DISPLAY OF TABS   \n",
+       "3       8321 3RD ST W  00401    54.0        88.13B+            METER EXP.   \n",
+       "4       121 CROFT AVE  00401    54.0         80.58L  PREFERENTIAL PARKING   \n",
+       "\n",
+       "   Fine amount   Latitude   Longitude  \n",
+       "0         93.0  34.054504 -118.296550  \n",
+       "1         58.0  34.057714 -118.290016  \n",
+       "2         25.0  34.076090 -118.364762  \n",
+       "3         63.0  34.072748 -118.370758  \n",
+       "4         68.0  34.074382 -118.374200  "
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "csv_file = \"parking_citations_final.csv\"\n",
+    "la_parking_citations_df = pd.read_csv(csv_file)\n",
+    "la_parking_citations_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "TOYT    1365173\n",
+       "HOND     907738\n",
+       "FORD     689924\n",
+       "NISS     576495\n",
+       "CHEV     537312\n",
+       "BMW      377689\n",
+       "MERZ     339796\n",
+       "VOLK     277374\n",
+       "HYUN     254988\n",
+       "LEXS     238081\n",
+       "DODG     231856\n",
+       "KIA      194316\n",
+       "JEEP     191521\n",
+       "AUDI     162432\n",
+       "MAZD     149594\n",
+       "OTHR     139360\n",
+       "GMC      113260\n",
+       "INFI     105803\n",
+       "CHRY     102141\n",
+       "ACUR      96421\n",
+       "SUBA      91888\n",
+       "VOLV      76373\n",
+       "MITS      66799\n",
+       "CADI      62081\n",
+       "MNNI      59797\n",
+       "LNDR      48966\n",
+       "TOYO      47928\n",
+       "PORS      43291\n",
+       "FRHT      38549\n",
+       "UNK       38137\n",
+       "         ...   \n",
+       "DAVI          1\n",
+       "OPNR          1\n",
+       "LEGR          1\n",
+       "LNK           1\n",
+       "HNDA          1\n",
+       "CRYL          1\n",
+       "BNDE          1\n",
+       "OSCK          1\n",
+       "CHNO          1\n",
+       "SEAR          1\n",
+       "CHSS          1\n",
+       "ELOM          1\n",
+       "BRAU          1\n",
+       "SNCR          1\n",
+       "GNSI          1\n",
+       "HACK          1\n",
+       "WHT           1\n",
+       "PTRS          1\n",
+       "ELO           1\n",
+       "ODHM          1\n",
+       "AVON          1\n",
+       "HELD          1\n",
+       "LAZD          1\n",
+       "WNBA          1\n",
+       "AUDB          1\n",
+       "MECU          1\n",
+       "KONA          1\n",
+       "ANMN          1\n",
+       "HUES          1\n",
+       "MEZD          1\n",
+       "Name: Make, Length: 1352, dtype: int64"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "la_parking_citations_df[\"Make\"].value_counts()"
+   ]
   }
  ],
  "metadata": {
@@ -3577,7 +3838,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
